# Meta-Hackathon---Synapsters

./: .gitignore  Dockerfile  LICENSE  README.md  conftest.py  error_log.txt  inference.py  inference_run.txt  openenv.yaml  pyproject.toml  requirements.txt  test_results.txt
server/: __init__.py  app.py  client.py  grader.py  meeting_environment.py  models.py  tasks.py
tests/: __init__.py  test_meeting_env.py
